# person-counting-lc-hw

./: .gitignore  readme.md  requirements.txt
dataset/: conv_to_dens.py  conv_to_fomo.py  create_fomo_dataset.py  readme.md
dataset/hc/: data.yaml
dataset/hc/train/: count.csv
dataset/hc/val/: count.csv
dataset/train/labels/: All_off_000001.txt  All_off_000121.txt  All_off_000241.txt  All_off_000281.txt  All_off_000321.txt  All_off_000441.txt  All_off_000521.txt  All_off_000561.txt  All_off_000681.txt  All_off_000721.txt  All_off_000841.txt  All_off_000921.txt  All_off_001041.txt  All_off_001081.txt  All_off_001121.txt  All_off_001161.txt  All_off_001201.txt  All_off_001281.txt  All_off_001401.txt  All_off_001481.txt  All_off_001561.txt  (+210 more)
deployment/: readme.md
deployment/esp-eye/components/image_provider/: CMakeLists.txt  camera_image_provider.cpp  cars_image.c  esp_eye_camera_config.cpp  idf_component.yml  no_cars_image.c  static_image_provider.cpp
deployment/esp-eye/components/image_provider/include/: camera_image_provider.h  cars_image.h  esp_eye_camera_config.h  image_provider.h  no_cars_image.h  static_image_provider.h
models/: DatasetLoader.py  save_info.py
models/density_based/: readme.md  train_paper_unet.ipynb
models/fomo/: model_loss.py  readme.md  results_loaf_hc.yaml  results_m.yaml  test_model_loaf.ipynb  train_model.ipynb  train_model_loaf.ipynb
models/mobilenet/: model_info.yaml  readme.md  results.yaml  test_model.ipynb  train_model.ipynb
models/modified_fomo/: ModelBuilder.py  readme.md  results.ipynb  results.yaml  train.py
(+569 files in other folders)
